@@ -1,7 +1,10 @@
 include_directories(${CMAKE_SOURCE_DIR}/lib ${CMAKE_SOURCE_DIR}/utility
     ${Boost_INCLUDE_DIRS} ${ODE_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR})
 
-set(spark_libs kerosin oxygen zeitgeist salt)
+# It is problematic under Linux! Will cause segfaults on simspark exit.
+if (WIN32 OR APPLE)
+   set(spark_libs kerosin oxygen salt zeitgeist)
+endif (WIN32 OR APPLE)
 if (APPLE AND USE_COREFOUNDATION)
       set(spark_libs ${spark_libs} /System/Library/Frameworks/CoreFoundation.framework)
 endif (APPLE AND USE_COREFOUNDATION) 
